<resources>
    <string name="app_name">HClinico</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="User">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="Register">Registrar</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_contrato">Contrato</string>
    <string name="title_cuenta_list">Cuentas</string>
    <string name="title_cuenta_detail">Cuenta Detail</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_cuenta">cuenta</string>
    <string name="title_activity_inicio">InicioActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detalle_factura">DetalleFactura</string>
    <string name="title_activity_factura2">Factura2</string>
    <string name="title_activity_detalle_consumo">DetalleConsumo</string>
</resources>
