<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ec.com.altura.aclient.MiLogin">

    <EditText
        android:layout_width="349dp"
        android:layout_height="67dp"
        android:id="@+id/editText10"
        android:background="@color/md_blue_100"
        android:drawableLeft="@drawable/ic_person_outline_24dp"
        android:inputType="none"
        android:hint="@string/User"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:layout_marginTop="116dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="349dp"
        android:layout_height="67dp"
        android:id="@+id/editText11"
        android:background="@color/md_blue_100"
        android:drawableLeft="@drawable/ic_https_24dp"
        android:inputType="none"
        android:hint="@string/Password"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:layout_below="@+id/editText10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:text="@string/btn_login"
        android:id="@+id/button3"
        android:background="@color/md_blue_800"
        android:textColor="#fff"
        android:freezesText="false"
        android:onClick="iniciarSecion"
        android:layout_below="@+id/editText11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrarte"
        android:id="@+id/button4"
        android:background="@color/md_blue_800"
        android:textColor="#fff"
        android:freezesText="false"
        android:onClick="registrar"
        android:layout_weight="0.06"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
